--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
     </style>
 
     
-    <title>Blog React App</title>
+    <title>MERN-CMS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
